Update Lineaer_afbilding.tex and linearkom.tex

--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -101,7 +101,7 @@ Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et \
 %
 \subsection{Matrix-vektorprodukt}
 %
-Som udvidelse til linearkombinationen kan der tales om et\textbf{matrix-vektorprodukt}.
+Som udvidelse til linearkombinationen kan der tales om et \textbf{matrix-vektorprodukt}.
 %
 %Altså, jeg vil måske mene, at nedenstående definition minder for meget om den i bogen (s. 19). Men igen... "Det er heller ikke ham, der har fundet på det." - Mads Vejleder, 2019. 
 %
@@ -207,3 +207,8 @@ A\textbf{u}=
 \end{bmatrix}.
 $$
 \end{eks}
+Et eller andet om hvilke egenskaber matrixvektorprodukt har.
+
+\begin{thm}{}{mxvpro}
+Sætning 1.3
+\end{thm}
