--- a/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxinvers.tex
@@ -1,6 +1,7 @@
 \subsection{Inverse matricer}
 
 \begin{defn}{}{mxinvers}
-
-
+En $n \times n$ matrix $A$ er \textbf{invertibel}, hvis en $n \times n$ matrix $B$ eksisterer, så $AB=BA=I_n$. $B$ er i så fald $A$'s invers. 
 \end{defn}
+
+
