--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -6,5 +6,6 @@
 	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxmulti.tex}
+	\input{incl/main/linear_algebra/matricer_vektorer/mxinvers.tex}
 	\input{incl/main/linear_algebra/lineaer_afbilding}
 
