Update invertibilitet.tex and linear_algebra.tex

--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -7,4 +7,4 @@
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxmulti.tex}
 	\input{incl/main/linear_algebra/lineaer_afbilding}
-
+	\input{incl/main/linear_algebra/invertibilitet}
