--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -1,2 +1,158 @@
 \chapter{Simplex metoden}
-% God arbejdslyst 
+% Eksempel
+\begin{eks}\label{lineu}
+Lad en mængde af vektorer være
+\begin{align*}
+\S &= \left\{
+\begin{bmatrix}
+           4 \\
+           1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           -3 \\
+           0 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           1 \\
+           -2 \\
+\end{bmatrix}
+\right\}.
+\end{align*}
+\noindent
+% Skal skrives om fra et spørgsmål 
+Afgør om vektorerne er lineært uafhængige, altså hvis $x_1$ og $x_2 = 0$, er den eneste løsning til linearkombination.
+\begin{align*}
+x_1+
+\begin{bmatrix}
+           4 \\
+           1 \\
+\end{bmatrix}
++ x_2
+\begin{bmatrix}
+           -3 \\
+           0 \\
+\end{bmatrix}
++ x_3
+\begin{bmatrix}
+           1 \\
+           -2 \\
+\end{bmatrix}
+=0 
+\end{align*}
+%
+Totalmatricen opkrives 
+\noindent
+\begin{align*}
+A=
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+4 & -3 & 1 & 0\\
+1 & 0 & -2 & 0 \\
+\end{block}
+\end{blockarray}
+\xrightarrow[R_2 \rightarrow R_2+(-1R_1)]{R_1 \rightarrow \frac{1}{4}R_1} 
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\ 
+\begin{block}{[ccc|c]}
+1 & \frac{-3}{4} & \frac{1}{4} & 0\\
+0 & \frac{3}{4} & \frac{-9}{4} & 0 \\
+\end{block}
+\end{blockarray}
+\xrightarrow[R_1 \rightarrow R_1+(\frac{3}{4} R_2)]{R_2 \rightarrow \frac{4}{3} \times R_2} 
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+\hlight{1} & 1 & -2 & 0\\
+0 & \hlight{1} & -3 & 0\\
+\end{block}
+\end{blockarray}
+\end{align*}
+%
+Da tolalmatricen ikke har nogle frie variable, har den kun en løsning og derfor lineært uafhængig.
+\\
+\\
+\noindent
+Lad i stedet en mængde af vektorer være 
+%
+\begin{align*}
+\S &= \left\{
+\begin{bmatrix}
+           4 \\
+           1 \\
+           -2 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           -3 \\
+           0 \\
+           1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           1 \\
+           -2 \\
+           1 \\
+\end{bmatrix}
+\right\}.
+\end{align*}
+\noindent
+Afgør om vektorerne er lineært uafhængige, altså hvis $x_1$, $x_2$ og $x_3 = 0$, er den eneste løsning til linearkombinationen.
+\begin{align*}
+x_1+
+\begin{bmatrix}
+           4 \\
+           1 \\
+           -2 \\
+\end{bmatrix}
++ x_2
+\begin{bmatrix}
+          -3 \\
+           0 \\
+           1 \\
+\end{bmatrix}
++ x_3
+\begin{bmatrix}
+           1 \\
+           -2 \\
+           1 \\
+\end{bmatrix}
+=0.
+\end{align*}
+%
+Totalmatricen opskrives 
+%
+\begin{align*}
+A=
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+4 & -3 & 1 & 0\\
+1 & 0 & -2 & 0 \\
+-2 & 1 & 1 & 0 \\
+\end{block}
+\end{blockarray}
+&\xrightarrow[R_2\rightarrow R_2+(-4R_1)]{R_1 \leftrightarrow R_2}
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+1 & 0 & -2 & 0\\
+0 & -3 & 9 & 0\\
+-2 & 1 & 1 & 0 \\
+\end{block}
+\end{blockarray}
+\xrightarrow[R_3 \rightarrow R_3+\frac{1}{3}R_2]{R_3 \rightarrow R_3+2R_1}
+\begin{blockarray}{cccc}
+x_1 & x_2 & x_3 & b \\
+\begin{block}{[ccc|c]}
+\hlight{1} & 0 & -2 & 0\\
+0 & -3 & 9 & 0 \\
+0 & 0 & 0 & 0 \\
+\end{block}
+\end{blockarray}
+\end{align*}
+\noindent
+Dette betyder, at der findes en ikke-triviel lineær kombination, som giver nulvektoren. Derfor har vi minimum fundet én linearkombination som er ikke-nul og derfor er det bevist at vektorsættet lineært afhængigt.
+\end{eks}
