--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -79,5 +79,14 @@ T(c\textbf{u} + k\textbf{v}) = T(c\textbf{u}) + T(k\textbf{v}) = cT(\textbf{u}) 
 Sætning \ref{thm:afbegen}(d) kan generaliseres til at vise at lineær afbildning bevarer lineær kombinationer.
 %
 \begin{lem}{}{}
-
+Lad $T:\R^n \rightarrow \R^m$ være en lineær afbildning, lad      $\textbf{u}_1,\textbf{u}_2,\ldots,\textbf{u}_k$ være vektorer i $\R^n$ og lad $a_1,a_2,\ldots,a_k$ være skalarer, så gælder
+%
+\begin{align*}
+T(a_1\textbf{u}_1 + a_2\textbf{u}_2 + \cdots + a_k\textbf{u}_k) = T(a_1\textbf{u}_1) + T(a_2\textbf{u}_2) + \cdots + T(a_k\textbf{u}_k).
+\end{align*}
+%
 \end{lem}
+%
+\begin{proof}
+Lemmaet følger direkte af sætning \ref{thm:afbegen}.
+\end{proof}
