--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -1,5 +1,3 @@
-\\\\
-
 
 \begin{defn}{}{}
 En funktion $f:\R^n \rightarrow \R^m$ siges at være \textbf{surjektiv} hvis dens billedmængde er hele $\R^m$, altså at alle vektorer i $\R^m$ er en afbildning af mindst en vektor i $\R^n$.\\
@@ -7,7 +5,9 @@ Funktionen siges at være \textbf{injektiv} hvis hver entydig vektor i $\R^n$ ha
 Hvis en funktion er både injektiv og surjektiv så er funktionen \textbf{bijektiv}.
 \end{defn}
 
-\subsection{invertibilitet}
+\subsection{Invertibilitet af funktioner}
+
+
 
 \begin{eks}
 Givet matricen 
