--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -111,7 +111,7 @@ $$
 Da matricen $B$ inddeles i sine søjlevektorer, er grundprincippet i matrixmultiplikation at finde matrix-vektorprodukter.\\\\
 En række egenskaber gælder for matrixmultiplikation, som summeret i særning \ref{thm:mxmulti}.
 
-\begin{thm}{}{}\label{thm:mxmulti}
+\begin{thm}{}{mxmulti}
 Lad $A$ og $B$ være $k \times m$ matricer, $C$ være en $m \times n$ matrix, og $P$ og $Q$ være $n \times p$ matricer. Følgende udsagn er dermed sande:
 \begin{enumerate}[label=(\alph*)]
 \item $s(AC)=(sA)C=A(sC)$ for en vilkårlig skalar $s$.
