--- a/incl/main/linear_algebra/Lineaer_afbilding.tex
+++ b/incl/main/linear_algebra/Lineaer_afbilding.tex
@@ -144,5 +144,44 @@ For at bevise entydigheden, lad $T_A=T_B$.
 Jævnfør sætning \ref{thm:mxvpro} (e) gælder det at $A=B$, eftersom $A \mathbf{v}=B \mathbf{v}$ for alle $\mathbf{v}$ i $\R^n$.
 \end{proof}
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{eks}\label{entydigeks}
 %
+Lad $T: R^3 \rightarrow R^2$ være defineret ved $T=\left(
+\begin{bmatrix}
+x_1\\
+x_2\\
+x_3
+\end{bmatrix}
+\right)
+=
+\begin{blockarray}{c}
+\begin{block}{[c]}
+5x_1+x_2\\
+3x_2+2x_3\\
+\end{block}
+\end{blockarray}
+$. \\
+For at danne standardmatricen for $T$, dannes søjlerne $T(\mathbf{e}_1=
+\begin{bmatrix}
+5\\
+0\\
+\end{bmatrix}$,
+$T(\mathbf{e}_2=
+\begin{bmatrix}
+1\\
+3\\
+\end{bmatrix}$, 
+$T(\mathbf{e}_3=
+\begin{bmatrix}
+0\\
+2\\
+\end{bmatrix}$. \\
+Derfor er standardmatricen for $T$ \\
+\begin{center}
+$\begin{bmatrix}
+5 & 1 & 0\\
+0 & 3 & 2\\
+\end{bmatrix}$
+\end{center}
+\end{eks}
